k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: client
  name: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - image: vikramjadhav/pdf-service-client
        name: client
        ports:
          - containerPort: 7001
