k8s/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-service
  labels:
    app: client
spec:
  selector:
    app: client 
  ports:
    - port: 7001
      targetPort: 7001
