k8s/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-service
  labels:
    app: server
spec:
  selector:
    app: server 
  ports:
    - port: 8001
      targetPort: 8001
